--- a/css/project.css
+++ b/css/project.css
@@ -36,7 +36,7 @@
   text-align: left;
   padding: 1rem;
   border-radius: 0.5rem;
-  background-image: url("/public/images/grain_texture.svg"),
+  background-image: url("/assets/images/grain_texture.svg"),
     linear-gradient(#693b9310, #6ebef463);
   backdrop-filter: blur(10px);
   /* overflow-wrap: break-word;
