--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Poppins";
-  src: url("/public/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+  src: url("/assets/") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url("/public/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf")
+  src: url("/assets//fonts/Inter/Inter-VariableFont_opsz\,wght.ttf")
     format("truetype");
   font-weight: normal;
   font-style: normal;
